Moved theme definitions from MiscGui.h to (new) Themes.h Commented user theme line now sets 'classic', not the defaults for the colour table entries used. Added greyscale range control. Also possible to reverse this is mostly intended for dark themes. Added tooltip colour control. Background, text and tip graphics are now managed. Improved theme lists, with some error trapping. Should prevent hangs or crashes if someone totally messes up a user theme. Also, every time the build number changes the theme is set to 'classic' and the example theme is updated. Themes have to be placed in .local/share/yoshimi/ For now, they are chosen manually with .local/share/yoshimi/ID/current

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,13 @@
 yoshimi 2.2.3 M
 
+2023-3-14 Will
+bn 2187
+Moved theme definitions from MiscGui.h to (new) Themes.h
+Commented user theme line now sets 'classic', not default
+Added greyscale range control
+Added tooltip colour control
+Improved theme lists, with some error trapping
+
 2023-3-11 Will
 bn 2186
 Theme control now entirely within ConfigUI.fl
