--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 yoshimi 2.2.3 M
 
 2023-3-14 Will
+bn 2188
+All parts of knobs are now themeable :) :)
+
+2023-3-14 Will
 bn 2187
 Moved theme definitions from MiscGui.h to (new) Themes.h
 Commented user theme line now sets 'classic', not default
