Completed changes to style of link buttons, also action buttons All of these themeable

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.2.3 M
 
+2023-3-20 Will
+bn 2192
+Made changes to style of link buttons, also all action buttons.
+All of these themeable.
+
 2023-3-19 Will
 bn 2191
 Cleanups on theme management.
