Learnable check boxes, numer roller etc. now identified with strong blue bold italic text, not with a pale bluse surround. Kit edit window not done yet.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 2.2.3 M
 
+2023-3-21 Will
+bn 2193
+Learnable check boxes, numer roller et. now identified with
+strong blue bold italic text, not with a pale bluse surround.
+Kit edit window not done yet.
+
 2023-3-20 Will
 bn 2192
 Made changes to style of link buttons, also all action buttons.
