--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.2.3 M
 
+2023-3-27 Will
+bn 2197
+All open windows now update when the theme is changed.
+Theme change no longer needs a reset.
+
 2023-3-26 Will
 bn 2196
 Themes can be entirely managed within the Config window :)
