--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,14 @@
 yoshimi 2.2.3 M
 
+2023-3-31 Will
+bn 2199
+Error check on theme files now very pedantic reporting
+    the relevant line number.
+Bank and Instrument 'lights' themeable.
+Close buttons themeable.
+'about' heading text themable.
+midi/solo text themeable.
+
 2023-3-29 Will
 bn 2198
 The native colourtable is now stored at startup.
