--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 2.2.3 M
 
+2023-4-2 Will
+bn 2201
+BugFix: WidgetMWSilder doubling callback entries
+Almost all slider peg colours converted.
+    Resonance window being difficult - as usual :(
+
 2023-4-1 Will
 bn 2200
 BugFix: Envelope freemode sustain was set learnable.
