--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.2.3 M
 
+2023-4-7 Will
+bn 2202
+Main window knobs now recognise the default position.
+From requests, changed link buttons to gtk style up buttons.
+
 2023-4-4 Will
 bn 2202
 All slider peg colours done.
