--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.2.3 M
 
+2023-4-11 Will
+bn 2207
+All filter knob pointers done except freemode.
+
 2023-4-10 Will
 bn 2206
 Completed all LFO knob pointers.
