Freemode knob pointers now partly done All filter parameter knob pointers done

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,9 @@ yoshimi 2.2.3 M
 
 2023-4-11 Will
 bn 2207
+Freemode knob pointers now partly done.
+All filter parameter knob pointers done.
+
 All filter knob pointers done except freemode.
 
 2023-4-10 Will
