--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 2.2.3 M
 
+2023-4-13 Will
+bn 2209
+Reinstated right click default of system effects.
+Format filter knob pointer done.
+Started work on Effect defaults.
+Set MIDI-learn to auto correct old control numbers.
+
 2023-4-12 Will
 bn 2208
 Rebuilt GUI System effect sends.
