--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,13 @@
 yoshimi 2.2.3 M
 
+2023-4-18 Will
+bn 2212
+Added formant filter sliders to new limits system.
+Set pointer colours for random walk controls.
+Improved error detection of theme files.
+Added missing theme colour for current bank background.
+Started adding new screenshots to user guide.
+
 2023-4-16 Will
 bn 2211
 Completed theme list.
