--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,14 @@
 yoshimi 2.2.3 M
 
+2023-4-20 Will
+bn 2213
+Completed updates to user guide images.
+Provisionally updated guide text.
+Set missing Midi CCs knob colours.
+Removed some confusing (redundant) tooltip colours.
+Theme label 'Current' and 'Make Default' button now
+    deactivated instead of being hidden.
+
 2023-4-18 Will
 bn 2212
 Added formant filter sliders to new limits system.
