Theme colours now fixed and order rationalised. Extra reserved entries added.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.2.3 M
 
+2023-4-29 Will
+bn 2217
+Theme colours now fixed and order rationalised.
+Extra reserved entries added.
+
 2023-4-28 Will
 bn 2216
 Changed freemode from light button to check button.
