Updates to user guide

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.2.3 M
 
+2023-4-30 Will
+bn 2218
+Updates to user manual
+
 2023-4-29 Will
 bn 2217
 Theme colours now fixed and order rationalised.
