BugFix: GUI not updating when part was loaded betweeen 16 and 25 This was due to the combination of kit numbers being changed to start from 16 for effects and kit being used by part load to identify the part ot load to. Also the returns in MiscGui read effects before main. Now trapped, but probably need to consider either placing main return before effects, or moving the part to load from kit to offset.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.2.3 M
 
+2023-5-02 Will
+bn 2221
+BugFix: GUI not updating when part loaded betweeen 16 and 25
+
 2023-4-30 Will
 bn 2220
 Added export feature to theme control.
