--- a/Changelog
+++ b/Changelog
@@ -1,11 +1,22 @@
-yoshimi 2.2.3 M
+yoshimi 2.3.0 rc1
 
-2023-5-04 Will
+2023-5-7 Will
+bn 2223
+Added missing right click action for formant freq dial.
+Added hidden totally grey colourmap (min & max greyscale as 127)
+Removed confusing theme (non) error messages.
+Updated CLI info.
+Updated docs (incuding User Guide).
+updated metainfo files.
+Added Ride Crash and Soft Shaker to Drums bank.
+Set version as 2.3.0 rc1
+
+2023-5-4 Will
 bn 2222
 All effects show correct defaults for all presets and set
 appropriate colours - completes all knobs/sliders.
 
-2023-5-02 Will
+2023-5-2 Will
 bn 2221
 BugFix: GUI not updating when part loaded betweeen 16 and 25
 
