--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,8 @@
-yoshimi 2.3.0 rc7
+yoshimi 2.3.0 rc8
+
+2023-5-17 Will
+bn 2230
+BugFix: Effect preset text not setting 'normal' colour.
 
 2023-5-17 Will
 bn 2229
