BugFix: Dynfilter not setting filter knob colours or postions. Ever since we impimented right click for default this only set the default for the first preset type. All others were set to these (wrong) values. This was compounded when we added colour recognition. The different presets are now correctly tracked. However, currently the internal formant settings are still wrong, both for right click and colour.

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 yoshimi 2.3.0 rc8
 
 2023-5-22 Will
+bn 2232
+BugFix: Dynfilter not setting filter knob colours or postions.
+
 bn 2231
 BugFix: Not setting default preset when effect type changed.
 
