--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.0 rc9
 
+2023-5-25 Will
+bn 2234
+BugFiX: previous dynfilter regression not reversed!
+
 2023-5-24 Will
 bn 2233
 Added two drum souds from Lorenzo
