--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.0 rc9
 
+2023-5-26 Will
+bn 2235
+Resolved dynfilter formant defaults for all except frequency.
+
 2023-5-25 Will
 bn 2234
 BugFiX: previous dynfilter regression not reversed!
