--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.3.0 rc9
 
+
+2023-5-27 Will
+bn 2237
+Fixed regression. Formant amp dial not updating graph.
+
 2023-5-26 Will
 bn 2236
 Resolved dynfilter freqency defaults.
