--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.0 rc9
 
+2023-5-28 Will
+bn 2238
+Corrected envelope 'E' button style.
+Added theme control to AddVoice tab 'unused' colour.
 
 2023-5-27 Will
 bn 2237
