--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.0 M
 
+2023-6-14 Will
+bn 2240
+Removed non-free copyright content from dev-notes and histories.
+
 Returned to development.
 Merged pull request (spelling errors).
 
