--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,14 @@
-yoshimi 2.3.0 M
+yoshimi 2.3.0.1
+
+2023-6-15 Will
+bn 2241
+BugFix: Array bounds error in themes code and incorrect
+  terminator type
+Changed Histories archive to ordinary directory.
+Revised Util directory
+Updated some docs.
+
+Set bugfix version 2.3.0.1
 
 2023-6-14 Will
 bn 2240
