--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.0 M
 
+2023-7-14 Will
+bn 2244
+BugFix: Visible freemode windows not recognising theme changes.
+
 2023-7-13 Will
 bn 2243
 BugFix: controllers breath switch not updating across parts.
