--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.0 M
 
+2023-7-20 Will
+bn 2246
+BugFix: Crash trying to paste mod waveform preset from CLI.
+
 2023-7-19 Will
 bn 2245
 Made some improvements to Copy/Paste GUI updates, particulalry from CLI.
