--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,11 @@
 yoshimi 2.3.0 M
+2023-7-27 Will
+bn 2247
+BugFix: MIDI-learn using older number format instead of decoding the text.
+Changed ID in metainfo file to make it unique.
+Some small code cleanups.
+Doc updates.
+
 
 2023-7-20 Will
 bn 2246
