BugFix: Crash in legacy PadSynth 'apply' code. It seems that Pkitmode is not recognised at the point where this is tested (InterChange.cpp line 1535) and switching PadSynth on/off from the main Edit window *always* sets the kitnumber greater than the maximim, so testing this sees to be the simplest way of resoving the issue.
BugFix: Some Windows not recognised as from Yoshimi due to it not being in
the window title. This has been added to all of them, and will be further
improved.

New feature: If the virtual keboard is visible, using the mouse to select
instruments from banks will pass computer key focus to the keyboard so that
different sounds can be compared without having a MIDI keyboard attached.

Updated some docs.

--- a/Changelog
+++ b/Changelog
@@ -1,11 +1,19 @@
-yoshimi 2.3.0 M
+yoshimi 2.3.0.3
+
+2023-8-3 Will
+bn 2248
+BugFix: Crash in legacy PadSynth 'apply' code.
+BugFix: Some windows not recognised as Yoshim by some window managers.
+If V keyboard visible, selection from bank now gives it keyboard focus.
+Updated docs
+Set bugfix release 2.3.0.3
+
 2023-7-27 Will
 bn 2247
 BugFix: MIDI-learn using older number format instead of decoding the text.
 Changed ID in metainfo file to make it unique.
 Some small code cleanups.
 Doc updates.
-
 
 2023-7-20 Will
 bn 2246
