Further improvements to window titles. Some windows had been missed.
Removed code for looking for PDF manual. It's no longer included
at all - so wouldn't exist for new users, and an online downloadable
version is linked to in the HTML guide.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.3.0 M
 
+2023-8-12 Will
+bn 2250
+Further improvements to window titles.
+Removed code for looking for PDF manual.
+
 2023-8-11 Will
 bn 2249
 Unified window title creation
