{branch microtonal} Removed frequent swaps between variabe 'x' and variable tmp'x'   if there's an error the complete default is set so it's pointless.
Extended recognition of comments active text.

All operations seem correct.

There are multipe routes between the GUI, CLI, microtonal.cpp, interchange.cpp
These were developed independently of many years. All of them seem to work in
different ways while essentially doing the same things. Therefore this really
needs a major refactoring to make the code more readable and efficient.

--- a/Changelog
+++ b/Changelog
@@ -1,9 +1,13 @@
 yoshimi 2.3.0 M
 
+bn 2253
 {branch microtonal}
 Removed frequent swaps between variabe 'x' and variable tmp'x'
-    on error the complete default is set so it's pointless.
+  if there's an error the complete default is set so it's pointless.
+
 Extended recognition of comments active text.
+
+All operations seem correct.
 
 2023-8-19 Will
 bn 2252
