--- a/Changelog
+++ b/Changelog
@@ -1,9 +1,19 @@
 yoshimi 2.3.0 M
 
+2023-8-25 Will
+bn 2256
+linetotunings entirely C++ strings
+tuningtoline entirely C++ strings
+tuningtotext entirely C++ strings
+Implemented getLineFromText() to replace loadLine()
+loadscl now uses getLineFromText
+
 2023-8-24 Will
 bn 2255
 texttotunings and texttomapping immediately convert to C++ strings
-linetotunings entirlet C++ strings;
+linetotunings entirely C++ strings
+tuningtoline entirely C++ strings
+tuningtotext entirely C++ strings
 
 2023-8-23 Will
 bn 2254
