--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.1 rc2
 
+2023-9-20 Will
+Updated HTML user guide microtonal entry.
+No code changes.
+
 2023-9-18 Will
 bn 2267
 Further refinements to microtonal code.
