--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,15 @@
-yoshimi 2.3.1 rc3
+yoshimi 2.3.1
+
+2023-10-02 Will
+bn 2269
+BugFix: Command line prompt position not working.
+BugFix: CLI not enabling scales but seeming to do so.
+Add CLI warning when scales not enabled but scale action attempted.
+Improved some CLI failure messages.
+Added detail to CLI scales messages.
+Updated docs.
+Updated examples.
+Set release version 2.3.1
 
 2023-9-26 Will
 bn 2268
@@ -228,7 +239,7 @@ BugFiX: previous dynfilter regression not reversed!
 
 2023-5-24 Will
 bn 2233
-Added two drum souds from Lorenzo
+Added two drum sounds from Lorenzo
 Some Dynfilter cleanups, but more needed later.
 Set version as 2.3.0 rc9
 
